@@ -40,6 +40,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/asl">ASL</license>
  <notes>
+* [jan] Import and export UID vCard attributes (Bug #12427).
 * [mjr] Honor the &apos;browse&apos; setting when attempting empty searches.
 * [jan] Set generic &apos;phone&apos; attribute when importing from vCard (Bug #12329).
 * [mjr] Add API methods for using history modification sequences.
@@ -1667,6 +1668,7 @@
    <date>2013-07-06</date>
    <license uri="http://www.horde.org/licenses/asl">ASL</license>
    <notes>
+* [jan] Import and export UID vCard attributes (Bug #12427).
 * [mjr] Honor the &apos;browse&apos; setting when attempting empty searches.
 * [jan] Set generic &apos;phone&apos; attribute when importing from vCard (Bug #12329).
 * [mjr] Add API methods for using history modification sequences.
