@@ -2,6 +2,7 @@
 v4.1.1-git
 ----------
 
+[jan] Import and export UID vCard attributes (Bug #12427).
 [mjr] Honor the 'browse' setting when attempting empty searches.
 [jan] Set generic 'phone' attribute when importing from vCard (Bug #12329).
 [mjr] Add API methods for using history modification sequences.
